(AngularJS) Removed ng-show in register pages

--- a/appenv/src/src/static/app/register/key-register.html
+++ b/appenv/src/src/static/app/register/key-register.html
@@ -1,5 +1,4 @@
 <div class="container">
-    <!--<div class="panel"></div>-->
     <h2>{{keyRegister.title}}</h2>
     <div class="panel-group">
         <div class="panel panel-primary">
@@ -9,18 +8,23 @@
                 number will be displayed shortly after, and you can enter the rest of information then.
             </div>
         </div>
-        <div reader tagData="keyRegister.tagData" message="keyRegister.message"></div>
+        <div class="panel">
+            <div reader tagData="keyRegister.tagData" message="keyRegister.message"></div>
+        </div>
         <div class="panel panel-info">
             <div class="panel-heading">{{self.tagData}} status</div>
             <div class="panel-body">{{self.message}}</div>
         </div>
-        <div ng-show="(keyRegister.tagData.length > 0)" class="panel panel-default">
-            <div class="panel-heading">Editing information regarding key/room #{{keyRegister.tagData}}</div>
+        <div class="panel panel-default">
+            <div class="panel-heading">Editing information regarding room key #{{keyRegister.tagData}}</div>
             <div class="panel-body">
-                <div class="form-group">
-                    <input ng-model="keyRegister.roomId" placeholder="Room number..." type="text"/>
-                    <button ng-click="keyRegister.register()" class="btn btn-primary">Register</button>
-                    <button ng-click="keyRegister.cancel()" class="btn btn-danger" type="reset">Cancel</button>
+                <div class="form-inline">
+                    <div class="form-group">
+                        <label for="rid">Room number:</label>
+                        <input ng-model="keyRegister.roomId" class="form-control" placeholder="Enter room number..." id="rid" type="text"/>
+                        <button ng-click="keyRegister.register()" class="btn btn-primary">Register</button>
+                        <button ng-click="keyRegister.cancel()" class="btn btn-danger">Cancel</button>
+                    </div>
                 </div>
             </div>
         </div>
