--- a/appenv/src/src/static/app/register/user-register.html
+++ b/appenv/src/src/static/app/register/user-register.html
@@ -1,5 +1,4 @@
 <div class="container">
-    <!--<div class="panel"></div>-->
     <h2>{{userRegister.title}}</h2>
     <div class="panel-group">
         <div class="panel panel-primary">
@@ -9,21 +8,28 @@
                 displayed shortly after, and you can enter the rest of information then.
             </div>
         </div>
-        <div reader tagData="userRegister.tagData" message="userRegister.message"></div>
+        <div class="panel">
+            <div reader tagData="userRegister.tagData" message="userRegister.message"></div>
+        </div>
         <div class="panel panel-info">
             <div class="panel-heading">{{self.tagData}} status</div>
             <div class="panel-body">{{self.message}}</div>
         </div>
-        <div ng-show="(userRegister.tagData != '')" class="panel panel-default">
+        <div class="panel panel-default">
             <div class="panel-heading">Editing information about person #{{userRegister.tagData}}</div>
             <div class="panel-body">
-                <div class="form-group">
-                    <input ng-model="userRegister.firstName" placeholder="First name" type="text"/>
-                    <input ng-model="userRegister.lastName" placeholder="Last name" type="text"/>
-                    <input ng-model="userRegister.picUrl" placeholder="Picture (icon) url" type="text"/>
-                    <!--<input ng-model="userRegister.email" placeholder="Email" type="text"/>-->
-                    <button ng-click="userRegister.register()" class="btn btn-primary">Register</button>
-                    <button ng-click="userRegister.cancel()" class="btn btn-danger" type="reset">Cancel</button>
+                <div class="form-inline">
+                    <div class="form-group">
+                        <label for="fname">First name:</label>
+                        <input ng-model="userRegister.firstName" class="form-control" placeholder="Enter first name" id="fname" type="text"/>
+                        <label for="lname">Last name:</label>
+                        <input ng-model="userRegister.lastName" class="form-control" placeholder="Enter last name" id="lname" type="text"/>
+                        <label for="purl">Picture url:</label>
+                        <input ng-model="userRegister.picUrl" class="form-control" placeholder="Enter picture url" id="purl" type="text"/>
+                        <!--<input ng-model="userRegister.email" placeholder="Email" id="email" type="text"/>-->
+                        <button ng-click="userRegister.register()" class="btn btn-primary">Register</button>
+                        <button ng-click="userRegister.cancel()" class="btn btn-danger">Cancel</button>
+                    </div>
                 </div>
             </div>
         </div>
