(AngularJS) Made response-data-data a local private var and binded it to reader-tagData and moved tagdata reference in templates before reader directive

--- a/appenv/src/src/static/app/register/key-register.html
+++ b/appenv/src/src/static/app/register/key-register.html
@@ -8,12 +8,12 @@
                 number will be displayed shortly after, and you can enter the rest of information then.
             </div>
         </div>
-        <div class="panel">
-            <div reader tagData="keyRegister.tagData" message="keyRegister.message"></div>
-        </div>
         <div class="panel panel-info">
             <div class="panel-heading">{{self.tagData}} status</div>
             <div class="panel-body">{{self.message}}</div>
+        </div>
+        <div class="panel">
+            <div reader tagData="keyRegister.tagData" message="keyRegister.message"></div>
         </div>
         <div class="panel panel-default">
             <div class="panel-heading">Editing information regarding room key #{{keyRegister.tagData}}</div>
@@ -21,7 +21,8 @@
                 <div class="form-inline">
                     <div class="form-group">
                         <label for="rid">Room number:</label>
-                        <input ng-model="keyRegister.roomId" class="form-control" placeholder="Enter room number..." id="rid" type="text"/>
+                        <input ng-model="keyRegister.roomId" class="form-control" placeholder="Enter room number..."
+                               id="rid" type="text"/>
                         <button ng-click="keyRegister.register()" class="btn btn-primary">Register</button>
                         <button ng-click="keyRegister.cancel()" class="btn btn-danger">Cancel</button>
                     </div>
