--- a/appenv/src/src/static/app/register/user-register.html
+++ b/appenv/src/src/static/app/register/user-register.html
@@ -8,12 +8,12 @@
                 displayed shortly after, and you can enter the rest of information then.
             </div>
         </div>
-        <div class="panel">
-            <div reader tagData="userRegister.tagData" message="userRegister.message"></div>
-        </div>
         <div class="panel panel-info">
             <div class="panel-heading">{{self.tagData}} status</div>
             <div class="panel-body">{{self.message}}</div>
+        </div>
+        <div class="panel">
+            <div reader tagData="userRegister.tagData" message="userRegister.message"></div>
         </div>
         <div class="panel panel-default">
             <div class="panel-heading">Editing information about person #{{userRegister.tagData}}</div>
@@ -21,11 +21,14 @@
                 <div class="form-inline">
                     <div class="form-group">
                         <label for="fname">First name:</label>
-                        <input ng-model="userRegister.firstName" class="form-control" placeholder="Enter first name" id="fname" type="text"/>
+                        <input ng-model="userRegister.firstName" class="form-control" placeholder="Enter first name"
+                               id="fname" type="text"/>
                         <label for="lname">Last name:</label>
-                        <input ng-model="userRegister.lastName" class="form-control" placeholder="Enter last name" id="lname" type="text"/>
+                        <input ng-model="userRegister.lastName" class="form-control" placeholder="Enter last name"
+                               id="lname" type="text"/>
                         <label for="purl">Picture url:</label>
-                        <input ng-model="userRegister.picUrl" class="form-control" placeholder="Enter picture url" id="purl" type="text"/>
+                        <input ng-model="userRegister.picUrl" class="form-control" placeholder="Enter picture url"
+                               id="purl" type="text"/>
                         <!--<input ng-model="userRegister.email" placeholder="Email" id="email" type="text"/>-->
                         <button ng-click="userRegister.register()" class="btn btn-primary">Register</button>
                         <button ng-click="userRegister.cancel()" class="btn btn-danger">Cancel</button>
