(AngularJS) Trying to use directive without binding tagData

--- a/appenv/src/src/static/app/register/key-register.html
+++ b/appenv/src/src/static/app/register/key-register.html
@@ -13,7 +13,8 @@
             <div class="panel-body">{{self.message}}</div>
         </div>
         <div class="panel">
-            <div reader tagData="keyRegister.tagData" message="keyRegister.message"></div>
+            <!--<div reader tagData="keyRegister.tagData" message="keyRegister.message"></div>-->
+            <div reader message="keyRegister.message"></div>
         </div>
         <div class="panel panel-default">
             <div class="panel-heading">Editing information regarding room key #{{keyRegister.tagData}}</div>
