--- a/appenv/src/src/static/app/register/user-register.html
+++ b/appenv/src/src/static/app/register/user-register.html
@@ -13,7 +13,8 @@
             <div class="panel-body">{{self.message}}</div>
         </div>
         <div class="panel">
-            <div reader tagData="userRegister.tagData" message="userRegister.message"></div>
+            <!--<div reader tagData="userRegister.tagData" message="userRegister.message"></div>-->
+            <div reader message="userRegister.message"></div>
         </div>
         <div class="panel panel-default">
             <div class="panel-heading">Editing information about person #{{userRegister.tagData}}</div>
