--- a/appenv/src/src/static/app/register/user-register.html
+++ b/appenv/src/src/static/app/register/user-register.html
@@ -8,13 +8,12 @@
                 displayed shortly after, and you can enter the rest of information then.
             </div>
         </div>
+        <div class="panel">
+            <div reader tagData="userRegister.tagData" message="userRegister.message"></div>
+        </div>
         <div class="panel panel-info">
             <div class="panel-heading">{{self.tagData}} status</div>
             <div class="panel-body">{{self.message}}</div>
-        </div>
-        <div class="panel">
-            <!--<div reader tagData="userRegister.tagData" message="userRegister.message"></div>-->
-            <div reader message="userRegister.message"></div>
         </div>
         <div class="panel panel-default">
             <div class="panel-heading">Editing information about person #{{userRegister.tagData}}</div>
