(AngularJS) Simply element

--- a/appenv/src/src/static/app/register/key-register.html
+++ b/appenv/src/src/static/app/register/key-register.html
@@ -9,7 +9,8 @@
             </div>
         </div>
         <div class="panel">
-            <div reader tagData="keyRegister.tagData" message="keyRegister.message"></div>
+            <reader></reader>
+            <!--<div reader tagData="keyRegister.tagData" message="keyRegister.message"></div>-->
         </div>
         <div class="panel panel-info">
             <div class="panel-heading">{{self.tagData}} status</div>
