--- a/appenv/src/src/static/app/register/key-register.html
+++ b/appenv/src/src/static/app/register/key-register.html
@@ -9,8 +9,9 @@
             </div>
         </div>
         <div class="panel">
-            <reader></reader>
+            <!--<reader></reader>-->
             <!--<div reader tagData="keyRegister.tagData" message="keyRegister.message"></div>-->
+            <div reader tagData="tagData" message="message"></div>
         </div>
         <div class="panel panel-info">
             <div class="panel-heading">{{self.tagData}} status</div>
