--- a/appenv/src/src/static/app/reader/reader.html
+++ b/appenv/src/src/static/app/reader/reader.html
@@ -8,12 +8,12 @@
         <div class="panel-heading">
             <!--<span>Tag ID: <span>{{tagData}}</span></span>-->
             <label for="'tagData'">Tag ID:</label>
-            <input disabled name="'tagData'" ng-model="tagData" type="text"/>
+            <input disabled name="'tagData'" ng-model="rdc.tagData" type="text"/>
         </div>
     </div>
     <div class="panel panel-danger">
         <div class="panel-heading">
-            <p>{{message}}</p>
+            <p>{{rdc.message}}</p>
         </div>
     </div>
 </div>
