(AngularJS) Getting outer scope inside directive

--- a/appenv/src/src/static/app/register/key-register.html
+++ b/appenv/src/src/static/app/register/key-register.html
@@ -10,7 +10,8 @@
         </div>
         <div class="panel">
             <!--<reader></reader>-->
-            <div reader tagData="keyRegister.tagData" message="keyRegister.message"></div>
+            <div reader tagData="keyRegister.tagData" message="keyRegister.message"
+                 getOuterScope="keyRegister.getOuterScope()"></div>
             <!--<div reader tagData="tagData" message="message"></div>-->
         </div>
         <div class="panel panel-info">
