(AngularJS) Added watchers for tagData and message in controllers

--- a/appenv/src/src/static/app/register/user-register.html
+++ b/appenv/src/src/static/app/register/user-register.html
@@ -9,10 +9,7 @@
             </div>
         </div>
         <div class="panel">
-            <!--<reader></reader>-->
-            <div reader tagData="userRegister.tagData" message="userRegister.message"
-                 getOuterScope="userRegister.getOuterScope()"></div>
-            <!--<div reader tagData="tagData" message="message"></div>-->
+            <div reader tagData="userRegister.tagData" message="userRegister.message"></div>
         </div>
         <div class="panel panel-info">
             <div class="panel-heading">{{self.tagData}} status</div>
