--- a/appenv/src/src/static/app/register/user-register.html
+++ b/appenv/src/src/static/app/register/user-register.html
@@ -17,12 +17,12 @@
         <div class="panel panel-info">
             <!--<div class="panel-heading">{{self.tagData}} status</div>-->
             <!--<div class="panel-body">{{self.message}}</div>-->
-            <div class="panel-heading">{{tagData}} status</div>
+            <div class="panel-heading">{{tagData}}</div>
             <div class="panel-body">{{message}}</div>
         </div>
         <div class="panel panel-default">
             <!--<div class="panel-heading">Editing information about person #{{userRegister.tagData}}</div>-->
-            <div class="panel-heading">Editing information about person #{{tagData}}</div>
+            <div class="panel-heading">Editing information about person #<span>{{tagData}}</span></div>
             <div class="panel-body">
                 <div class="form-inline">
                     <div class="form-group">
