--- a/appenv/src/src/static/app/register/user-register.html
+++ b/appenv/src/src/static/app/register/user-register.html
@@ -12,7 +12,7 @@
         </div>
         <div class="panel">
             <!--<div reader tagData="userRegister.tagData" message="userRegister.message"></div>-->
-            <div reader tagData="tagData" message="message"></div>
+            <div reader tag-data="tagData" message="message"></div>
         </div>
         <div class="panel panel-info">
             <!--<div class="panel-heading">{{self.tagData}} status</div>-->
