--- a/appenv/src/src/static/app/users/users-results.html
+++ b/appenv/src/src/static/app/users/users-results.html
@@ -1,6 +1,6 @@
 <div class="container" ng-show="results">
     <h1>Search results:</h1>
     <div ng-repeat="user in results | orderBy: id track by $index">
-        <userInfo></userInfo>
+        <user-info></user-info>
     </div>
 </div>
