--- a/appenv/src/src/static/app/users/users-search.html
+++ b/appenv/src/src/static/app/users/users-search.html
@@ -8,5 +8,5 @@
             <button ng-click="usersSearch.cancel()" type="reset" class="btn btn-default">Cancel</button>
         </div>
     </div>
-    <usersSearchResults></usersSearchResults>
+    <users-search-results results="usersSearch.results"></users-search-results>
 </div>
