(AngularJS) Added references to newly added controllers

--- a/appenv/src/src/static/index.html
+++ b/appenv/src/src/static/index.html
@@ -37,11 +37,14 @@
     <script src="static/app/sessions/session-info.controller.js"></script>
 
     <script src="static/app/keys/keys.service.js"></script>
+    <script src="static/app/keys/keys.controller.js"></script>
     <script src="static/app/keys/key-info.directive.js"></script>
     <script src="static/app/keys/key-session.controller.js"></script>
     <script src="static/app/keys/key-session.directive.js"></script>
     <script src="static/app/keys/keys-search.controller.js"></script>
+
     <script src="static/app/users/users.service.js"></script>
+    <script src="static/app/users/users.controller.js"></script>
     <script src="static/app/users/user-info.directive.js"></script>
     <script src="static/app/users/users-results.directive.js"></script>
     <script src="static/app/users/users-search.controller.js"></script>
