--- a/appenv/src/src/static/app/keys/key-info.html
+++ b/appenv/src/src/static/app/keys/key-info.html
@@ -1,4 +1,9 @@
-<div class="container">
-    <h1>Key #{{keyInfo.tagId}}</h1>
-    <hr/>
+<div class="panel panel-default">
+    <div class="panel-heading">
+        <span>Key ID: {{key.id}}</span>
+        <span>Tag ID: {{key.tag_id}}</span>
+        <span>Room number: {{key.room_id}}</span>
+        <span></span>
+        <button class="btn btn-primary">Edit</button>
+    </div>
 </div>
