--- a/appenv/src/src/static/app/keys/keys-search.html
+++ b/appenv/src/src/static/app/keys/keys-search.html
@@ -1,15 +1,19 @@
 <div class="container">
-    <h1 class="col-sm-10">{{ keysSearch.title }}</h1>
-    <h3 class="col-sm-10">{{ keysSearch.note }}</h3>
-    <div>
-        <div class="form-group">
-            <input ng-model="keysSearch.queryset" placeholder="Enter room ID..." type="text"/>
-            <button ng-click="keysSearch.submit()" type="submit" class="btn btn-primary">Search</button>
-            <button ng-click="keysSearch.cancel()" type="reset" class="btn btn-default">Cancel</button>
+    <div class="panel panel-primary">
+        <div class="panel-heading">{{ keysSearch.title }}</div>
+        <div class="panel-body">
+            <h3>{{ keysSearch.note }}</h3>
+            <div class="form-group">
+                <input ng-model="keysSearch.queryset" placeholder="Enter room ID..." type="text"/>
+                <button ng-click="keysSearch.submit()" type="submit" class="btn btn-primary">Search</button>
+                <button ng-click="keysSearch.cancel()" type="reset" class="btn btn-default">Cancel</button>
+            </div>
         </div>
     </div>
-    <div ng-show="keysSearch.keyId">
-        <info-key key-id="keysSearch.keyId"></info-key>
+    <div class="container">
+        <div ng-show="keysSearch.keyId">
+            <info-key key-id="keysSearch.keyId"></info-key>
+        </div>
     </div>
-    <div ng-hide="keysSearch.result" key-session></div>
+    <!--<div ng-hide="keysSearch.result" key-session></div>-->
 </div>
