--- a/appenv/src/src/static/app/users/user-info.html
+++ b/appenv/src/src/static/app/users/user-info.html
@@ -1,30 +1,8 @@
 <div class="container">
     <div class="row">
-        <div class="span12">
-            <div class="well well-small clearfix">
-                <div class="row-fluid">
-                    <div class="span3"><img class="img-thumbnail" src="{{user.pic_url}}" alt="avatar"></div>
-                    <div class="span3">{{user.first_name}} {{user.last_name}}</div>
-                    <div class="span3">{{user.id}}</div>
-                    <div class="span3">{{user.tag_id}}</div>
-                </div>
-            </div>
-        </div>
+        <span style="max-width: 30%"><img class="img-thumbnail" src="{{user.pic_url}}" alt="avatar"></span>
+        <span style="width: 30%">{{user.first_name}} {{user.last_name}}</span>
+        <span style="width: 30%">{{user.id}}</span>
+        <span style="width: 30%">{{user.tag_id}}</span>
     </div>
-    <!--<div class="col-lg-3">-->
-        <!---->
-    <!--</div>-->
-    <!--<span class="col-lg-3">-->
-        <!---->
-    <!--</span>-->
-    <!--<span class="col-lg-3"></span>-->
-    <!--<span class="col-lg-3">-->
-        <!---->
-    <!--</span>-->
-    <!--<span class="col-lg-3">-->
-        <!---->
-    <!--</span>-->
-    <!--<span class="col-lg-12">-->
-        <!---->
-    <!--</span>-->
 </div>
