(AngularJS) Styling info components

--- a/appenv/src/src/static/app/keys/keys-search.html
+++ b/appenv/src/src/static/app/keys/keys-search.html
@@ -12,7 +12,7 @@
     </div>
     <div class="container">
         <div ng-show="keysSearch.keyId">
-            <info-key key-id="keysSearch.keyId"></info-key>
+            <info-key id="keysSearch.keyId" tag_id="keySearch.tag_id"></info-key>
         </div>
     </div>
     <!--<div ng-hide="keysSearch.result" key-session></div>-->
