--- a/appenv/src/src/static/app/users/user-info.html
+++ b/appenv/src/src/static/app/users/user-info.html
@@ -1,8 +1,8 @@
 <div class="container">
     <div class="row">
-        <span style="max-width: 30%"><img class="img-thumbnail" src="{{user.pic_url}}" alt="avatar"></span>
-        <span style="width: 30%">{{user.first_name}} {{user.last_name}}</span>
-        <span style="width: 30%">{{user.id}}</span>
-        <span style="width: 30%">{{user.tag_id}}</span>
+        <span style="max-width: 30%"><img class="img-thumbnail" src="{{pic_url}}" alt="avatar"></span>
+        <span style="width: 30%">{{first_name}} {{last_name}}</span>
+        <span style="width: 30%">{{id}}</span>
+        <span style="width: 30%">{{tag_id}}</span>
     </div>
 </div>
