--- a/appenv/src/src/static/app/users/users-search.html
+++ b/appenv/src/src/static/app/users/users-search.html
@@ -1,12 +1,15 @@
 <div class="container">
-    <h1 class="col-sm-10">{{ usersSearch.title }}</h1>
-    <h3 class="col-sm-10">{{ usersSearch.note }}</h3>
-    <div>
-        <div class="form-group">
-            <input ng-model="usersSearch.queryset" type="text" placeholder="Enter person ID..."/>
-            <button ng-click="usersSearch.submit()" type="submit" class="btn btn-primary">Search</button>
-            <button ng-click="usersSearch.cancel()" type="reset" class="btn btn-default">Cancel</button>
+    <div class="panel panel-primary">
+        <div class="panel-heading">{{ usersSearch.title }}</div>
+        <div class="panel-body">
+            <h3>{{ usersSearch.note }}</h3>
+            <div class="form-group">
+                <input ng-model="usersSearch.queryset" type="text" placeholder="Enter person ID..."/>
+                <button ng-click="usersSearch.submit()" type="submit" class="btn btn-primary">Search</button>
+                <button ng-click="usersSearch.cancel()" type="reset" class="btn btn-default">Cancel</button>
+            </div>
         </div>
     </div>
+    <hr/>
     <users-search-results results="usersSearch.results"></users-search-results>
 </div>
