--- a/appenv/src/src/static/app/navigation/navigation.html
+++ b/appenv/src/src/static/app/navigation/navigation.html
@@ -1,8 +1,7 @@
 <nav class="navbar navbar-default navbar-fixed-top">
     <div class="container-fluid">
         <div class="navbar-header">
-            <!--navCollapsed = !navCollapsed-->
-            <button type="button" ng-init="navCollapsed = true" ng-click="collapseNavbar()"
+            <button type="button" ng-init="navCollapsed = true" ng-click="navCollapsed = !navCollapsed"
                     class="navbar-toggle collapsed">
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
@@ -11,7 +10,8 @@
             <a class="navbar-brand" ng-click="setActive(0)" ng-href="/">RFID Sessions Site Dashboard</a>
         </div>
 
-        <div class="collapse navbar-collapse" ng-class="{'in': !navCollapsed}">
+        <!--{'in': !navCollapsed}-->
+        <div class="collapse navbar-collapse" ng-class="navCollapsed ? '' : 'in'">
             <ul class="nav navbar-nav">
                 <li ng-class="{ active: isActive(0) }"><a ng-click="setActive(0)" ng-href="/">Home</a></li>
                 <li ng-class="{ active: isActive(1) }"><a ng-click="setActive(1)" ng-href="sessions">Sessions</a></li>
