--- a/appenv/src/src/static/app/navigation/navigation.html
+++ b/appenv/src/src/static/app/navigation/navigation.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-default navbar-fixed-top">
     <div class="container-fluid">
         <div class="navbar-header">
-            <button type="button" ng-init="navCollapsed = true" ng-click="navCollapsed = !navCollapsed"
+            <button type="button" ng-click="navCollapsed = !navCollapsed"
                     class="navbar-toggle collapsed">
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
