(AngularJS & Flask) Changes to user schema and added usersessions to both front and back end

--- a/appenv/src/src/static/app/register/user-register.html
+++ b/appenv/src/src/static/app/register/user-register.html
@@ -28,7 +28,7 @@
                                id="lname" type="text" ng-required="true"/>
                         <label for="email">Last name:</label>
                         <input ng-model="email" class="form-control" placeholder="Enter email"
-                               id="email" type="text" ng-required="true"/>
+                               id="email" type="email" ng-required="true"/>
                         <label for="role">Role:</label>
                         <select ng-required="true" class="form-control" ng-model="role" name="role" id="role">
                             <option value="1">Professor</option>
