--- a/appenv/src/src/static/index.html
+++ b/appenv/src/src/static/index.html
@@ -49,6 +49,9 @@
     <script src="static/app/users/users-results.directive.js"></script>
     <script src="static/app/users/users-search.controller.js"></script>
 
+    <script src="static/app/user-sessions/user-sessions.service.js"></script>
+    <script src="static/app/user-sessions/user-sessions.controller.js"></script>
+
     <script src="static/app/register/register.service.js"></script>
     <script src="static/app/register/key-register.controller.js"></script>
     <script src="static/app/register/user-register.controller.js"></script>
