--- a/appenv/src/src/static/app/register/user-register.html
+++ b/appenv/src/src/static/app/register/user-register.html
@@ -26,7 +26,7 @@
                         <label for="lname">Last name:</label>
                         <input ng-model="lastName" class="form-control" placeholder="Enter last name"
                                id="lname" type="text" ng-required="true"/>
-                        <label for="email">Last name:</label>
+                        <label for="email">Email:</label>
                         <input ng-model="email" class="form-control" placeholder="Enter email"
                                id="email" type="email" ng-required="true"/>
                         <label for="role">Role:</label>
