--- a/appenv/src/src/static/app/users/users.html
+++ b/appenv/src/src/static/app/users/users.html
@@ -13,14 +13,19 @@
         <div ng-repeat="user in users.list | orderBy:users.orderProp track by $index">
             <div class="container">
                 <div class="row">
-                    <div class="panel-heading">
-                        <h4>User # {{user.id}}</h4>
+                    <div class="panel panel-primary">
+                        <div class="panel-heading">
+                            <h4>User # {{user.id}}</h4>
+                        </div>
+                        <div class="panel-body">
+                            <span style="max-width: 30%"><img class="img-thumbnail" src="{{user.pic_url}}" alt="avatar"></span>
+                            <span style="width: 30%">{{user.first_name}} {{user.last_name}}</span>
+                            <span style="width: 30%"><i>{{user.email}}</i></span>
+                            <span style="width: 30%">{{user.tag_id}}</span>
+                        </div>
                     </div>
-                    <div class="panel-body">
-                        <span style="max-width: 30%"><img class="img-thumbnail" src="{{user.pic_url}}" alt="avatar"></span>
-                        <span style="width: 30%">{{user.first_name}} {{user.last_name}}</span>
-                        <span style="width: 30%"><i>{{user.email}}</i></span>
-                        <span style="width: 30%">{{user.tag_id}}</span>
+                    <div>
+                        <button class="btn btn-primary" ng-href="/user/sessions/{{user.id}}">View user sessions</button>
                     </div>
                 </div>
             </div>
