(AngularJS) Fixing users page

--- a/appenv/src/src/static/app/users/users.html
+++ b/appenv/src/src/static/app/users/users.html
@@ -1,4 +1,6 @@
 <div class="container-fluid">
+    <h1>Users registered</h1>
+    <hr/>
     <div class="container">
         <div>
             Order keys by:
