--- a/appenv/src/src/static/index.html
+++ b/appenv/src/src/static/index.html
@@ -26,7 +26,7 @@
 
     <script src="static/app/navigation/nav.controller.js"></script>
     <script src="static/app/navigation/nav.directive.js"></script>
-    <script src="static/app/shared/template.provider.js"></script>
+    <script src="static/shared-components/base/template.provider.js"></script>
 
     <script src="static/app/reader/reader.service.js"></script>
     <script src="static/app/reader/reader.controller.js"></script>
@@ -57,7 +57,8 @@
     <script src="static/app/register/user-register.controller.js"></script>
 </head>
 <body class="container-fluid" ng-controller="MainController">
-<div ng-include="'static/app/navigation/navigation.html'"></div>
+<!--<div ng-include="'static/app/navigation/navigation.html'"></div>-->
+<nav-directive></nav-directive>
 <br/>
 <br/>
 <div ng-view></div>
