--- a/appenv/src/src/static/shared-components/navigation/navigation.html
+++ b/appenv/src/src/static/shared-components/navigation/navigation.html
@@ -12,19 +12,19 @@
 
         <div class="collapse navbar-collapse" ng-class="{'in': !navCollapsed}">
             <ul class="nav navbar-nav">
-                <li ng-repeat="(key, route) in leftNav | track by $index" ng-class="{ active: isActive(key) }"><a
-                        ng-click="setActive(key);navCollapsed = !navCollapsed"
-                        ng-href="{{route}}">{{routeNames[key]}}</a></li>
+                <li ng-repeat="route in leftNav | track by $index" ng-class="{ active: isActive($index) }"><a
+                        ng-click="setActive($index);navCollapsed = !navCollapsed"
+                        ng-href="route.route">{{route.name}}</a></li>
             </ul>
             <ul class="nav navbar-nav">
-                <li ng-repeat="(key, route) in midNav | track by $index" ng-class="{ active: isActive(key) }"><a
-                        ng-click="setActive(key);navCollapsed = !navCollapsed"
-                        ng-href="{{route}}">{{routeNames[key]}}</a></li>
+                <li ng-repeat="route in midNav | track by $index" ng-class="{ active: isActive($index) }"><a
+                        ng-click="setActive($index);navCollapsed = !navCollapsed"
+                        ng-href="route.route">{{route.name}}</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-                <li ng-repeat="(key, route) in rightNav | track by $index" ng-class="{ active: isActive(key) }"><a
-                        ng-click="setActive(key);navCollapsed = !navCollapsed"
-                        ng-href="{{route}}">{{routeNames[key]}}</a></li>
+                <li ng-repeat="route in rightNav | track by $index" ng-class="{ active: isActive($index) }"><a
+                        ng-click="setActive($index);navCollapsed = !navCollapsed"
+                        ng-href="route.route">{{route.name}}</a></li>
             </ul>
         </div>
     </div>
