--- a/appenv/src/src/static/index.html
+++ b/appenv/src/src/static/index.html
@@ -58,7 +58,7 @@
 </head>
 <body class="container-fluid" ng-controller="MainController">
 <!--<div ng-include="'static/app/navigation/navigation.html'"></div>-->
-<nav-directive></nav-directive>
+<nav-bar></nav-bar>
 <br/>
 <br/>
 <div ng-view></div>
