--- a/appenv/src/src/static/app/keys/keys.html
+++ b/appenv/src/src/static/app/keys/keys.html
@@ -1,4 +1,6 @@
 <div class="container-fluid">
+    <h1>List of all available keys</h1>
+    <hr/>
     <div class="container">
         <div>
             Order keys by:
