--- a/appenv/src/src/static/app/users/users.html
+++ b/appenv/src/src/static/app/users/users.html
@@ -3,7 +3,7 @@
     <hr/>
     <div class="container">
         <div>
-            Order keys by:
+            Order users by:
             <select ng-model="users.orderProp" name="orderProp" id="orderProp">
                 <option value="id">User ID</option>
                 <option value="tag_id">Tag ID</option>
@@ -20,7 +20,7 @@
                             <h4>User # {{user.id}}</h4>
                         </div>
                         <div class="panel-body">
-                            <span style="max-width: 30%"><img class="img-thumbnail" src="user.pic_url" alt="avatar"></span>
+                            <span style="max-width: 30%"><img class="img-thumbnail" ng-src="user.pic_url" alt="avatar"></span>
                             <span style="width: 30%">{{user.first_name}} {{user.last_name}}</span>
                             <span style="width: 30%"><i>{{user.email}}</i></span>
                             <span style="width: 30%">{{user.tag_id}}</span>
