--- a/appenv/src/src/static/index.html
+++ b/appenv/src/src/static/index.html
@@ -24,6 +24,7 @@
     <script src="static/app/shared/template.provider.js"></script>
     <script src="static/app/shared/main.controller.js"></script>
     <script src="static/app/home/home.controller.js"></script>
+    <script src="static/app/shared/images.service.js"></script>
 
     <script src="static/app/navigation/nav.controller.js"></script>
     <script src="static/app/navigation/nav.directive.js"></script>
